css/styles.css
* {
  font-family: 'Open Sans', sans-serif;
}

body {
  background-color: rgb(216, 216, 216);
}

/* Fonts used: 'Open Sans', light 300, regular 400, bold 700 */
main {
  background-color: rgb(241, 241, 241);
}

h1 {
  font-size: 150%;
  font-weight: 400;
  margin: 0;
}

h3 {
  width: 90%;
  margin: 0 0 1rem 0;
}

p {
  margin-top: 0;
  margin-bottom: 1rem;
}

img {
  width: 100%;
  max-height: 15rem;
  object-fit: cover;
}

label {
  display: block;
  font-weight: 700;
  padding-bottom: 0.5rem;
}

a,
button,
i {
  cursor: pointer;
}

img,
input,
textarea,
button,
select,
.confirm {
  border-radius: 6px;
}

input,
select,
textarea {
  margin-bottom: 1rem;
  padding: 0.5rem;
  width: 100%;
  border: 1px solid lightgray;
}

textarea {
  height: 8rem;
}

ul {
  list-style: none;
  padding: 0;
}

li {
  margin-top: 1rem;
}

#search {
  margin: 0;
  padding: 0.25rem 1rem 0.25rem 0.25rem;
}

#sort-order {
  margin: 0;
  margin-top: 0.5rem;
  width: auto;
  padding: 0.25rem 0.5rem;
}

#delete-entry {
  color: rgb(206, 0, 0);
  text-decoration: underline;
}

#confirm-delete {
  color: white;
  background-color: rgb(206, 0, 0);
}

#cancel-delete {
  font-weight: 700;
  background-color: lightgray;
}

#delete-popup {
  display: flex;
  background-color: rgba(53, 53, 53, 0.479);
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
}

.flex {
  display: flex;
}

.right {
  justify-content: flex-end;
}

.align-center {
  align-items: center;
}

.space-bt {
  justify-content: space-between;
}

.purple {
  color: rgb(73, 13, 129);
}

.purple-bkg {
  color: rgb(241, 241, 241);
  background-color: rgb(73, 13, 129);
}

.container {
  margin-bottom: 1rem;
}

.search-form {
  display: flex;
}

.no-bkg-button {
  border: none;
  background-color: transparent;
  position: relative;
  right: 1.5rem;
}

.confirm {
  margin: auto;
  max-width: 85%;
  text-align: center;
  padding: 1rem;
  background-color: white;
}

.confirm h3 {
  margin: auto;
  padding: 2rem 1rem 3rem;
}

.confirm button {
  margin: 0;
}

.date-of-entry {
  color: darkgray;
  text-align: right;
}

.head-banner {
  margin: 1rem 0 0 0;
  font-weight: 400;
  padding: 0.5rem 1rem;
  font-size: 125%;
}

.no-entry {
  text-align: center;
}

.fas {
  margin-top: 0.5rem;
}

.form {
  padding: 1rem;
}

.form h2 {
  font-size: 200%;
  margin: 0 0 1rem 0;
}

.icon {
  margin-right: 0;
}

.img-frame {
  padding-bottom: 1rem;
}

.save-button {
  margin: auto;
  margin-right: 0;
  border: none;
  padding: 0.5rem 1.25rem;
  font-size: 100%;
}

.show-entries {
  margin-left: 1.5rem;
}

.tags {
  color: rgb(126, 126, 126);
}

.tag-link {
  margin: 0 0.25rem;
  padding: 0 0.25rem;
  border-radius: 4px;
  background-color: rgb(216, 216, 216);
}

.tag-link:hover {
  background-color: rgb(228, 228, 228);
}

input:focus,
textarea:focus,
select:focus {
  outline: none;
  border: 3px solid rgb(73, 13, 129);
}

button:active {
  background-color: rgb(115, 34, 190);
}

@media screen and (min-width: 768px) {
  img {
    max-height: 40rem;
  }

  #search {
    margin-left: 1.5rem;
  }

  #sort-order {
    margin: 0;
  }

  .img-frame {
    padding-right: 1rem;
  }

  .confirm {
    max-width: 50%;
  }
}

